[package]
name = "imgui-cxx"
version = "0.1.1"
license = "MIT"
description = "Dear ImGui: Bloat-free Immediate Mode Graphical User interface for C++ with minimal dependencies"
authors = ["Rui <2221870259@qq.com>"]
homepage = "https://github.com/ocornut/imgui"
repository = "https://github.com/rust-cxx/imgui-cxx.git"
edition = "2018"
build = "build.rs"

[build-dependencies]
cargo-cxx = "0.1"

[lib]
name = "imgui_cxx"
path = "lib.rs"